crates/snapshot-tests/tests/snapshots/parser__datetimes__bad_day.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidDateTime]: invalid datetime: day is out of range at `a`
  ┌─ bad_day:1:5
  │
1 │ a = 2016-02-30
  │     ^^^^^^^^^^ invalid datetime: day is out of range


error: invalid datetime: day is out of range at `a`
 --> bad_day:1:5
  |
1 | a = 2016-02-30
  |     ^^^^^^^^^^ invalid datetime: day is out of range
Error {
    kind: "InvalidDateTime",
    message: "invalid datetime: day is out of range",
    span: 4..14,
    path: Some(
        "a",
    ),
}
